@startuml MCD

package "Gestion des utilisateurs" {
    class Utilisateur
    class Administrateur
    class Candidat
    class Recruteur
}

package "Gestion des organisations" {
    class Organisation
    class Formulaire {
        type : TYPE_FORMULAIRE
    }
    Formulaire "1" -- "1" Organisation : est lié à >
    Formulaire "1" -- "1" Recruteur : est lié à >
}

package "Gestion des offres" {
    class Offre_d_emploi
    class Fiche_poste
    class Candidature
    class description
}


package "Enumérations" {
    enum STATUT_UTILISATEUR
    enum ETAT_OFFRE
    enum SEXE
    enum TYPE_ORGANISATION
    enum TYPE_UTILISATEUR
    enum TYPE_FORMULAIRE
}


class Utilisateur {
    email : string
    password : hash / string
    nom : string 
    prenom : string
    date_creation : date
    telephone : string
    statut : STATUT_UTILISATEUR
    sexe : SEXE
    type_utilisateur : TYPE_UTILISATEUR
}

note top of Utilisateur
    password doit respecter les recomandations de sécurité de la CNIL
    - 12 caractères minimum
    - 1+ majuscule
    - 1+ minuscule
    - 1+ chiffre
    - 1+ caractère spécial parmi une liste d'autorisés
end note



class Administrateur {}
class Candidat {}
class Recruteur {}

Utilisateur <|-- Administrateur
Utilisateur <|-- Candidat
Utilisateur <|-- Recruteur

Recruteur "0..1" -- "*" Recruteur : valider demande de recruteur >
Administrateur "*"-- "*" Utilisateur : peut_donner_acces_admin >

class Organisation {
    siren : string
    Nom : string
    type : TYPE_ORGANISATION
    siege_social : string
}

class Offre_d_emploi {
    numero : string
    etat : ETAT_OFFRE
    date_validite : date
    indication : string
    nombre_de_piece : unsigned int
    modif_date_validite() : date
}

class Fiche_poste {
    intitule : string
    statut_poste : string
    responsable_hierarchique : string
    type_metier : string
    lieu_mission : string
    rythme : string
    fourchette_salaire : double[2]
}



Offre_d_emploi "1..*" -- "1" Organisation : appartient à >
Offre_d_emploi "1..*" -- "1" Fiche_poste : contient >
Offre_d_emploi "1..*" -- "1" Recruteur : est éditeur de <


class Candidature {
    date_candidature : date
    pieces_jointes : string
    modif_dossier() : void
    compléter_candidature() : void
}

class description {
    missions : string
    activités : string
    compétences_attendu : string
}

Fiche_poste "1" -- "1" description : contient >

Candidature "1..*" -- "1" Offre_d_emploi : concerne >
Candidature "1..*" -- "1" Candidat : est de >

Organisation "1" -- "1..*" Candidat : recrute >

enum STATUT_UTILISATEUR {
    ACTIF
    INACTIF
}

enum SEXE {
    Homme
    Femme
    Autre
}

enum ETAT_OFFRE {
    Non publiée
    Publiée
    Expirée
}

enum TYPE_ORGANISATION {
    Entreprise
    Association
    Eurl
    Sarl SASU
    Autre
}


enum TYPE_UTILISATEUR {
    Administrateur
    Recruteur
    Candidat
}

enum TYPE_FORMULAIRE {
    Formulaire d'ajout d'organisation
    Formulaire d'organisation existante
}

@enduml